# WORKING_TRACKER

./: .gitignore  app.py  auth.py  config.py  main.py  pyproject.toml  requirements.txt  rules.py  vercel.json
db/: config.py  rules.py
static/: manifest.json  sw.js
static/css/: add_working.css  dashboard.css  previous_workings.css  settings.css  style.css
static/js/: add_working.js  dashboard.js  main.js  previous_workings.js  script.js  settings.js
templates/: add_working.html  build.html  dashboard.html  index.html  previous_workings.html  settings.html
